--- a/3_Assessment.Rmd
+++ b/3_Assessment.Rmd
@@ -15,7 +15,7 @@ The historical landings used in the model differ from those used in 2011.  This 
 
 Selectivity in this model is assumed to be length-based and is modeled using double-normal selectivity for all fleets, except the `r spp` survey which retained the assumption used in previous assessment of logistic selectivity. The previous assessment mirrored selectivity among the `r spp` and both slope surveys (AFSC and NWFSC).  This assessment allows for survey-specific selectivity.
 
-All fishery-independent indices have been re-evaluated for this assessment using a spatial-temporal delta generalized linear mixed model (VAST delta-GLMM) which is an updated approach from that used in 2011, which  did not incorporate spatial effects.  This assessment opted to not include the fishery CPUE and the Triennial shelf index and composition data based upon discussions during the STAR panel.  The data used to create the CPUE index was not available for reanalysis and hence was excluded from this assessment due to questions regarding this index that could not be addressed.  In regards to the Triennial survey, `r spp` is considered a slope species off the US west coast and this survey did not sample the prime habitat for `r spp` and had limited observations relative to the other surveys. It was concluded that this data set was not a good source of information regarding this species.  
+All fishery-independent indices have been re-evaluated for this assessment using a spatial-temporal delta generalized linear mixed model (VAST delta-GLMM) which is an updated approach from that used in 2011, which  did not incorporate spatial effects.  This assessment opted to not include the fishery CPUE and the Triennial shelf index and composition data based upon discussions during the STAR panel.  The data used to create the CPUE index were not available for reanalysis and hence was excluded from this assessment due to questions regarding this index that could not be addressed.  In regards to the Triennial survey, `r spp` is considered a slope species off the US west coast and this survey did not sample the prime habitat for `r spp` and had limited observations relative to the other surveys. It was concluded that this data set was not a good source of information regarding this species.  
 
 Maturity and fecundity were updated for this assessment based upon new research. Fecundity for `r spp` used in this assessment was based on a re-evaluation of the fecundity of West Coast rockfish by Dick et al. [-@dick_meta-analysis_2017], updating the previous fecundity estimates used in the 2011 assessment [@dick_modeling_2009] (Figure \ref{fig:fecundity}).  Maturity in this assessment was based on examination of 537 fish samples which were used to estimate functional maturity, an approach that classifies rockfish maturity with developing oocytes as mature or immature based on the proportion of vitellogenin in the cytoplasm and the measured frequency of atretic cells (Melissa Head, personal communication, NWFSC, NOAA).  The updated maturity curve was based on maturity-at-length where the previous estimates used in 2011 were based on maturity-at-age (Figure \ref{fig:mat_compare}). 
 
@@ -39,7 +39,7 @@ The specification of when to estimate recruitment deviations is an assumption th
 
 The recommended selectivity in Stock Synthesis is the double-normal parameterization and it was used in this assessment for the all fleets, except the `r spp` survey, which was assumed logistic based on the length-composition data. Changes in retention curves were estimated for the fishery fleet.
 
-Time blocks for the fishery fleet are provided in Table \ref{tab:Model_setup}. Fishery retention has changed over the modeled period due to management changes. The time block on the retention curves for the fishery were set from 1918-1991, 1992-2001, 2002-2007, 2008, 2009-2010, 2011-2016  based on available discarding data and changes in trip limits that likely resulted in changes to discarding patterns of `r spp`. No discarding was assumed in the at-sea hake and the foreign fisheries.
+Time blocks for the fishery fleet are provided in Table \ref{tab:Model_setup}. Fishery selectivity and retention has changed over the modeled period due to management changes. The time block for fishery selectivity was set from 1918-1999 and 2000-2017 based on changes in selectivity arising from the overfished deceleration.  The time blocks on the retention curves for the fishery were set from 1918-1991, 1992-2001, 2002-2007, 2008, 2009-2010, 2011-2016  based on available discarding data and changes in trip limits that likely resulted in changes to discarding patterns of `r spp`. No discarding was assumed in the at-sea hake and the foreign fisheries.
 
 The following distributions were assumed for data fitting: survey indices were lognormal and total discards were lognormal.
 
@@ -51,7 +51,7 @@ The STAT team used Stock Synthesis version 3.30.03.05 by Dr. Richard Methot at t
 ###Priors
 A prior distribution was developed for natural mortality ($M$) from an analysis based on an assumed maximum age of 100 years. The analysis was performed by Owen Hamel (personal communications, NWFSC, NOAA) and used data from Then et al. [-@then_evaluating_2015] to provide a lognormal distribution for natural mortality. The lognormal prior has a median of 0.054 and a standard error of 0.438. 
 
-The prior for steepness ($h$) assumed a beta distribution with parameters based on an update of the Thorson-Dorn rockfish prior (commonly used in past West Coast rockfish assessments) conducted by James Thorson (personal communication, NWFSC, NOAA) which was reviewed and endorsed by the Scientific and Statistical Committee in 2017. The prior is a beta distribution with $\mu$=0.72 and $\sigma$=0.15.  The previous assessment estimated and fixed steepness equal to 0.40.  The current data does not contain information regarding steepness.  This change in perception is likely due to the observation of large recruitment events in this assessment and varying model specificiatons between the 2011 and the current model.
+The prior for steepness ($h$) assumed a beta distribution with parameters based on an update of the Thorson-Dorn rockfish prior (commonly used in past West Coast rockfish assessments) conducted by James Thorson (personal communication, NWFSC, NOAA) which was reviewed and endorsed by the Scientific and Statistical Committee in 2017. The prior is a beta distribution with $\mu$=0.72 and $\sigma$=0.15.  The previous assessment estimated and fixed steepness equal to 0.40.  The current data does not contain information regarding steepness.  This change in perception is likely due to the observation of large recruitment events in this assessment and varying model specifications between the 2011 and the current model.
 
 ###Data Weighting
 
@@ -64,11 +64,11 @@ The base assessment model was weighted using the "Francis method", which was bas
 
 ###Estimated And Fixed Parameters
 
-There were 163 estimated parameters in the base model. These included one parameter for $R_0$, 8 parameters for growth, 1 parameters for extra variability for the NWFSC shelf-slope survey indix, 24 parameters for selectivity, retention, and time blocking of the fleets and the surveys, 117 recruitment deviations, and 12 forecast recruitment deviations (Table \ref{tab:model_params}).
+There were 163 estimated parameters in the base model. These included one parameter for $R_0$, 8 parameters for growth, 1 parameters for extra variability for the NWFSC shelf-slope survey index, 24 parameters for selectivity, retention, and time blocking of the fleets and the surveys, 117 recruitment deviations, and 12 forecast recruitment deviations (Table \ref{tab:model_params}).
 
-Fixed parameters in the model were as follows. Steepness was fixed at `r print(mod1$parameters[mod1$parameters$Label == "SR_BH_steep","Value"],2)`. A sensitivity analysis and a likelihood profile were performed for steepness. Natural mortality was fixed at `r round(mod1$parameters[mod1$parameters$Label == "NatM_p_1_Fem_GP_1","Value"],3)` for females and males, which is the median of the prior.  The standard deviation of recruitment deviates was fixed at `r print(mod1$parameters[mod1$parameters$Label == "SR_sigmaR","Value"],2)`. Maturity-at-length was fixed as described in Section \ref{sex-ratio-maturation-and-fecundity}. Length-weight parameters were fixed at estimates using all length-weight observations (Figure \ref{fig:Wt_len_pred}).
+Fixed parameters in the model were as follows. Steepness was fixed at `r print(mod1$parameters[mod1$parameters$Label == "SR_BH_steep","Value"],2)`, the median of the prior. A sensitivity analysis and a likelihood profile were performed for steepness. Natural mortality was fixed at `r round(mod1$parameters[mod1$parameters$Label == "NatM_p_1_Fem_GP_1","Value"],3)` for females and males, which is the median of the prior.  The standard deviation of recruitment deviates was fixed at `r print(mod1$parameters[mod1$parameters$Label == "SR_sigmaR","Value"],2)`. Maturity-at-length was fixed as described in Section \ref{sex-ratio-maturation-and-fecundity}. Length-weight parameters were fixed at estimates using all length-weight observations (Figure \ref{fig:Wt_len_pred}).
 
-Dome-shaped selectivity was explored for all fleets within the model. Older `r spp` are often found in deeper waters and may move into areas that limit their availability to fishing gear, especially trawl gear. The final base model assumed asymptotic selectivity for the at-sea hake fishery, and all surveys.
+Dome-shaped selectivity was explored for all fleets within the model. Older `r spp` are often found in deeper waters and may move into areas that limit their availability to fishing gear, especially trawl gear. The final base model estimated dome-shaped selectivity for only the fishery and the selectiivties for the the at-sea hake fishery and all surveys were estimated asymptotic.
 
 ##Model Selection and Evaluation
 
@@ -83,7 +83,7 @@ Structurally, the model assumed that the landings from each fleet were represent
 
 ###Alternate Models Considered
 
-The exploration of models began by bridging from the 2011 assessment to Stock Synthesis version 3.30.03.05, which produced no discernible difference (Figure \ref{fig:bridge}). The updated landings data and discard rates added to the 2011 assessment produced insignificant differences in the relative scale of the population although the updated historical removals resulted in an increase in the estimate of unfished spawning output. Updating the survey indices produced small differences in the relative scale of the population. Adding age and length data each resulted in less of a population decline from the 1970s to pre-2000, resulting in an increase in the estimated  `r Project_firstyr` final stock status.  However, the addition of new data resulted in an early pattern within recruitment, indicating that the assumptions within the previous model may not represent the best fit to the current data.
+The exploration of models began by bridging from the 2011 assessment to Stock Synthesis version 3.30.03.05, which produced no discernible difference (Figure \ref{fig:bridge}). The updated landings data and discard rates added to the 2011 assessment produced insignificant differences in the relative scale of the population although the updated historical removals resulted in an increase in the estimate of unfished spawning output. Updating the survey indices produced small differences in the relative scale of the population (Figure \ref{fig:data_update}). Adding age and length data each resulted in less of a population decline from the 1970s to pre-2000, resulting in an increase in the estimated  `r Project_firstyr` final stock status.  However, the addition of new data resulted in an early pattern within recruitment, indicating that the assumptions within the previous model may not represent the best fit to the current data.  The 2011 assessment have several differing modeling assumptions which explain the results between updating the 2011 model and this results from this assessment.  Two major difference between the models are assumptions regarding steepness and natural mortality.  
 
 This assessment estimated discards in the model, so time was spent investigating time blocks for changes in selectivity and retention to match the discard data as best as possible. Using major changes in management and observed changes in landings, a set of blocks for retention were determined for the fishery fleet. In the spirit of parsimony, as few blocks as possible were used by only allowing blocks during time periods with data or when we felt they were justified by changes in management.  
 
@@ -136,7 +136,7 @@ The base model parameter estimates along with approximate asymptotic standard er
 ###Parameter Estimates
 The estimates of maximum length and the von Bertanlaffy growth coefficient, $k$, were less than the the external estimates for males and females (Figure \ref{fig:Len_Age}), but were well within the 95% confidence interval given the estimated uncertainty (Table \ref{tab:model_params} and Figure \ref{fig:sizeatage}).  Female and male `r spp` grow quickly at younger ages, reaching near maximum length by age 20, with female `r spp` reaching  larger maximum lengths. 
 
-Selectivity curves were estimated for the fishery and survey fleets.  The estimated selectivities for all fleets within the model are shown in Figure \ref{fig:selex}.  The fishery selectivity was estimated to be dome shaped, reaching maximum selectivity for fish between 35 and 40 cm.  An shift in selectivity for the final asymptotic selectivity was estimated for the fishery for prior to the overfished decleration and post (1918-1999 and 2000-2016).  The at-sea hake fishery was estimated to have little selectivity for smaller `r spp` reaching full selectivity at the largest sizes. The foreign fleet for which only catch data are available was assumed to be identical to the main fishery, although a sensitivity was performed (not shown) that mirrored the foreign selectivity to that of the `r spp` survey selectivity resulting in a negligible difference in stock status. Survey selectivities were estimated to be asymptotic during model explorations with the final selectivity forced to be asymptotic in the final base model.   
+Selectivity curves were estimated for the fishery and survey fleets.  The estimated selectivities for all fleets within the model are shown in Figure \ref{fig:selex}.  The fishery selectivity was estimated to be dome shaped, reaching maximum selectivity for fish between 35 and 40 cm.  An shift in selectivity for the final asymptotic selectivity was estimated for the fishery for prior to the overfished deceleration and post (1918-1999 and 2000-2016).  The at-sea hake fishery was estimated to have little selectivity for smaller `r spp` reaching full selectivity at the largest sizes. The foreign fleet for which only catch data are available was assumed to be identical to the main fishery, although a sensitivity was performed (not shown) that mirrored the foreign selectivity to that of the `r spp` survey selectivity resulting in a negligible difference in stock status. Survey selectivities were estimated to be asymptotic during model explorations with the final selectivity forced to be asymptotic in the final base model.   
 
 Retention curves were estimated for the fishery fleet only and were allowed to vary based upon discard data within the model over time (Figure \ref{fig:retention}).  Historical retention was estimated high and declined over time due to management restriction on landings of `r spp` with the lowest retention occurring in 2009 and 2010 prior to the implementation of ITQs.  Post-2011 retention was estimated to be nearly 100% for the fishery fleet. 
 
@@ -149,7 +149,7 @@ There are numerous types of data for which the fits are discussed: survey abunda
 
 The fits to the survey indices are shown in Figure \ref{fig:index_fits}.  Extra standard error was estimated for the NWFSC shelf-slope survey.  The `r spp` survey index were fit well by the model.  Both the AFSC and NWFSC slope survey indices were generally flat and fit well by the model. The recent NWFSC shelf-slope survey showed a variable trend over the time period with the 2016 data point being the highest estimate of the series and given the uncertainty around each data point (input and model estimated added variance) the model fit fell within the uncertainty interval for all years.
 
-Fits to the total observed discards required time blocks (Figure \ref{fig:discard_fits}).  Fits to the trawl discards from the Pikitch data in 1985-1987 were quite good.  The change in the discard rate modeled over  1992-2001 was based on management restrictions, which were assumed to have increased discarding practices in the fishery fleet.  The next required time block was based on the WCGOP data from 2002-2007 and were fit well by the model.  Discarding increased prior to the implementation of ITQs requiring blocks for 2008 and the 2009-2010 periods.  The model fit the very low post-ITQ discard rates based on the WCGOP data well.  The total estimated discard amount over time is shown in Figure \ref{fig:total_discard}. 
+Fits to the total observed discards required time blocks (Figure \ref{fig:discard_fits}).  Fits to the trawl discards from the Pikitch data in 1985-1987 were quite good.  The change in the discard rate modeled over 1992-2001 was based on management restrictions, which were assumed to have increased discarding practices in the fishery fleet.  The next required time block was based on the WCGOP data from 2002-2007 and were fit well by the model.  Discarding increased prior to the implementation of ITQs requiring blocks for 2008 and the 2009-2010 periods.  The model fit the very low post-ITQ discard rates based on the WCGOP data well.  The total estimated discard amount over time is shown in Figure \ref{fig:total_discard}. 
 
 Fits to the length data are shown based on the proportions of lengths observed by year and the Pearson residuals-at-length for all fleets.  Detailed fits to the length data by year and fleet are provided in Appendix \ref{appendix-a.-detailed-fit-to-length-composition-data}.  Aggregate fits by fleet are shown in Figure \ref{fig:length_agg}.  There are a few things that stand out when examining the aggregated length composition data. First, the sexed discard lengths appear to be poorly fit by the model but this is related to small sample sizes.  The NWFS slope survey lengths were under estimated by the model, but these data only represent two years. 
 
@@ -185,11 +185,11 @@ A number of sensitivity analyses were conducted, including:
   
   \item Fecundity relationship used in the previous assessment.
   
-  \item Remove the influence of the large 2008 year-class by setting the 2008 recruitment deviation to zero (estimated straight from the stock recruitment curve)
+  \item Remove the influence of the large 2008 year-class by setting the 2008 recruitment deviation to zero (estimated straight from the stock recruitment curve for that year)
   
   \item Include Triennial shelf survey (1980-2004) and composition data.
   
-  \item Remove all other surveys and associatted length and age data, except for the Triennial shelf survey.  Fishery length and ages were retained.  
+  \item Remove all other surveys and associated length and age data, except for the Triennial shelf survey.  Fishery length and ages were retained.  
   
   \item Include the historical commercial CPUE index.
   
@@ -203,11 +203,11 @@ A number of sensitivity analyses were conducted, including:
 
 Likelihood values and estimates of key parameters from each sensitivity are available in Tables \ref{tab:Sensitivity1} and \ref{tab:Sensitivity2}.  Plots of the estimated time-series of spawning output and relative depletion are shown in Figures \ref{fig:sens1_ssb}, \ref{fig:sens1_depl}, \ref{fig:sens2_ssb}, and \ref{fig:sens2_depl}.
 
-The sensitivities that explored steepness and using only Triennial survey data exhibited the largest changes in estimated stock status relative to the base model.  Fixing steepness at the 2011 value (h = 0.40) resulted in the final stock status being above the management target but having historically declining below the target.  Using only the Triennial shelf survey data resulted in a reduction in stock size and status relative to the base model.  The model estimated extended positive recruitments in the early period of the model in order to create an population age-structure that was consistent with the composition data resulting in an increase in biomass prior to the start of the foreign fishing fleet, indicating that potential model misspecification in the absense of the other survey data.    
+The sensitivities that explored steepness and using only Triennial survey data exhibited the largest changes in estimated stock status relative to the base model.  Fixing steepness at the 2011 value (h = 0.40) resulted in the final stock status being above the management target but having historically declined below the target.  Using only the Triennial shelf survey data resulted in a reduction in stock size and status relative to the base model.  The model estimated extended positive recruitments in the early period of the model in order to create an population age-structure that was consistent with the composition data resulting in an increase in biomass prior to the start of the foreign fishing fleet, indicating that potential model misspecification in the absence of the other survey data.    
 
-Weighting the data according to the harmonic means resulted in a largest decrease in the estimated stock status relative to the base model with the stock being estimated at 82% of unfished spawning output.
+Weighting the data according to the harmonic means resulted in a decrease in the estimated stock status relative to the base model with the stock being estimated at 82% of unfished spawning output.
 
-The sensitivity that removed the large 2008 year-class resulted in a large change in estimated stock status relative to the base model.  Assuming a recruitment even staight from the stock recruitment curve resulted in an estimated stock status of 75%.  
+The sensitivity that removed the large 2008 year-class resulted in a large change in estimated stock status relative to the base model.  Assuming a recruitment straight from the stock recruitment curve resulted in an estimated stock status of 75%.  
 
 Including additional data from either Canada, Washington research lengths, and or Oregon special projects data resulted in minimal reduction in the stock status relative to the base model.  
 The sensitivities that explored the inclusion of the CPUE index, the 2011 maturity, or fecundity relationship had little impact relative to the base model estimated stock status.
